--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
